--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "find test/spec -type f -name '*.js' | xargs mocha"
   },
   "dependencies": {
     "react": "15.3.2",
     "react-native": "^0.35.0"
   },
-  "jest": {
-    "preset": "jest-react-native"
-  },
   "devDependencies": {
-    "babel-jest": "16.0.0",
     "babel-preset-react-native": "1.9.0",
-    "jest": "16.0.2",
-    "jest-react-native": "16.0.0",
-    "react-test-renderer": "15.3.2"
+    "enzyme": "^2.5.1",
+    "mocha": "^3.1.2",
+    "react-dom": "^15.3.2",
+    "react-native-mock": "^0.2.7"
   }
 }
